# rust-playground

./: .gitignore  README.md
actix/: Cargo.toml
actix/src/: main.rs
actix/src/services/: auth.rs  serve_wasm.rs
actix/wasm/: Cargo.toml
jira_cli/: Cargo.toml  README.md
jira_cli/data/: db.json
jira_cli/src/: db.rs  navigator.rs
jira_cli/src/ui/pages/: mod.rs
programs/: Cargo.toml
programs/src/: binary_seach.rs  check_duplicates.rs  count_chars.rs  longest_common_prefix.rs  main.rs  palindrome.rs  repeated_string.rs  sock_merchant.rs  sort.rs  sum_of_digits.rs  valid_paranthesis.rs
rocket/: Cargo.toml
rocket/src/: main.rs
stackoverflow_api/: README.md
stackoverflow_api/src/: models.rs
stackoverflow_api/src/handlers/: mod.rs
stackoverflow_api/src/persistance/: answers_dao.rs
