[package]
name = "programs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"