[package]
name = "Rocket_API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
# rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0"
rocket_contrib = "0.4.11"
